<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagen_titulo"
            android:src="@drawable/titulo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagen_principal"           
            android:src="@drawable/principal" />
    </RelativeLayout>

    <Button
        android:id="@+id/boton1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:text="@string/comenzar"
		android:alpha="0.7"
		android:background="@android:color/darker_gray"
		android:textColor="@android:color/black"         
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/fondo_copyright"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
    
    
</LinearLayout>